[project]
name = "manualslib-scraper"
version = "0.1.0"
description = "Scrape TV manuals from manualslib.com"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "playwright-stealth",
    "flask",
    "pyyaml",
    "honcho",
    "python-dotenv",
    "internetarchive",
]

[project.scripts]
scrape = "scraper:main"
dashboard = "dashboard:app.run"
