[project]
name = "salli-cat"
version = "0.1.0"
description = "Salli Cat - CRT manual preservation tool"
requires-python = ">=3.11"
dependencies = [
    "click",
    "playwright",
    "playwright-stealth",
    "flask",
    "pyyaml",
    "honcho",
    "python-dotenv",
    "internetarchive",
    "pikepdf>=10.1.0",
]

[project.scripts]
salli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "templates/*"]
